# swift-syntax

./: .bazelrc  .editorconfig  .flake8  .gitattributes  .gitignore  .licenseignore  .spi.yml  .swift-format  BUILD.bazel  CMakeLists.txt  CODEOWNERS  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Changelog.md  MODULE.bazel  Package.swift  README.md  api-breakages.txt  build-script.py  format.py  swift-syntax-dev-utils  update-toolchain.py  update.sh
Sources/: CMakeLists.txt
Sources/ASTGen/: ASTGen.swift  CMakeLists.txt
Sources/IDEUtils/: CMakeLists.txt  Syntax+Classifications.swift  SyntaxClassification.swift.gyb  SyntaxClassifier.swift
Sources/SwiftBasicFormat/: BasicFormat.swift  CMakeLists.txt  Indenter.swift  InferIndentation.swift  Syntax+Extensions.swift  SyntaxProtocol+Formatted.swift  Trivia+FormatExtensions.swift  Trivia+Indented.swift  Utils.swift
Sources/SwiftCASParse/: main.swift
Sources/SwiftCompilerPlugin/: CMakeLists.txt  CompilerPlugin.swift  Diagnostics.swift  Macros.swift  PluginMacroExpansionContext.swift  PluginMessages.swift
Sources/SwiftCompilerPluginMessageHandling/: CMakeLists.txt  CompilerPluginMessageHandler.swift  Diagnostics.swift  LRUCache.swift  Macros.swift  PluginMacroExpansionContext.swift  PluginMessageCompatibility.swift  PluginMessages.swift  StandardIOMessageConnection.swift
Sources/SwiftCompilerSupport/: CMakeLists.txt  ConsistencyCheck.swift  SwiftCompilerSupport.h
Sources/SwiftDiagnostics/: CMakeLists.txt  Convenience.swift  Diagnostic.swift  DiagnosticMessage.swift  DiagnosticsFormatter.swift  FixIt.swift  GroupedDiagnostics.swift  Message.swift  Note.swift  SyntaxHighlightRangeCalculator.swift
Sources/SwiftIDEUtils/: CMakeLists.txt  DeclNameLocation.swift  FixItApplier.swift  KeywordCompletion.swift  NameMatcher.swift  SwiftIDEUtilsCompatibility.swift  Syntax+Classifications.swift  SyntaxClassification.swift  SyntaxClassifier.swift  Utils.swift
Sources/SwiftIfConfig/: ActiveClauseEvaluator.swift  ActiveSyntaxRewriter.swift  ActiveSyntaxVisitor.swift  BuildConfiguration.swift  CMakeLists.txt  ConfiguredRegionState.swift  ConfiguredRegions.swift  IfConfigDecl+IfConfig.swift  IfConfigDiagnostic.swift  IfConfigError.swift  IfConfigEvaluation.swift  IfConfigFunctions.swift  IfConfigRegionState.swift  IfConfigRewriter.swift  IfConfigState.swift  IfConfigVisitor.swift  StaticBuildConfiguration.swift  SyntaxLiteralUtils.swift  SyntaxProtocol+IfConfig.swift  VersionTuple+Parsing.swift  VersionTuple.swift
Sources/SwiftLexicalLookup/: CMakeLists.txt  IdentifiableSyntax.swift  IntroducingToParentScopeSyntax.swift  IntroducingToSequentialParentScopeSyntax.swift  LookupCache.swift  LookupConfig.swift  LookupName.swift  LookupResult.swift  LookupState.swift  QualifiedLookup.swift  ScopeImplementations.swift  ScopeSyntax.swift  SequentialScopeSyntax.swift  SimpleLookupQueries.swift  TypeScopeSyntax.swift
Sources/SwiftLexicalScopes/: LexicalScopes.swift  Scope.swift  ScopeConcreteImplementations.swift
Sources/SwiftLibraryPluginProvider/: CMakeLists.txt  LibraryPluginProvider.swift
Sources/SwiftOperatorPrecedence/: Operator.swift  OperatorPrecedence+Defaults.swift  OperatorPrecedence+Folding.swift  OperatorPrecedence+Semantics.swift  OperatorPrecedence.swift  OperatorPrecedenceError+Diagnostics.swift  OperatorPrecedenceError.swift  OperatorTable.swift  PrecedenceGraph.swift  PrecedenceGroup.swift
Sources/SwiftOperators/: CMakeLists.txt  Operator.swift  OperatorError+Diagnostics.swift  OperatorError.swift  OperatorPrecedenceError+Diagnostics.swift  OperatorTable+Defaults.swift  OperatorTable+Folding.swift  OperatorTable+Semantics.swift  OperatorTable.swift  PrecedenceGraph.swift  PrecedenceGroup.swift  SyntaxSynthesis.swift
Sources/SwiftParser/: Attributes.swift  Availability.swift  CMakeLists.txt  CharacterInfo.swift  CollectionNodes+Parsable.swift  CompilerFiles.swift  CompilerSupport.swift  DeclarationAttribute.swift.gyb  DeclarationModifier.swift.gyb  Declarations.swift  DelayedParsing.swift  Directives.swift  ExperimentalFeatures.swift  ExpressionInterpretedAsVersionTuple.swift  Expressions.swift  IncrementalParseTransition.swift  IsValidIdentifier.swift  Lexer.swift  LexerDiagnosticMessages.swift  Lookahead.swift  LoopProgressCondition.swift  Modifiers.swift  Names.swift  Nominals.swift  OperatorPrecedence+Parsing.swift  OperatorPrecedence.swift  Optional+OrMissing.swift  Parameters.swift  ParseSourceFile.swift  Parser+Entry.swift.gyb  Parser.swift  Patterns.swift  README.md  RawTokenKindMatch.swift  RawTokenKindSubset.swift  Recovery.swift  Specifiers.swift  Statements.swift  StringLiteralRepresentedLiteralValue.swift  StringLiterals.swift  (+17 more)
Sources/SwiftParserDiagnostics/: CMakeLists.txt  DiagnosticExtensions.swift  LexerDiagnosticMessages.swift  MissingNodesError.swift  MissingTokenError.swift  MultiLineStringLiteralDiagnosticsGenerator.swift  MultiLineStringLiteralDiagnoticsGenerator.swift  ParseDiagnosticsGenerator.swift  ParserDiagnosticMessages.swift  PresenceUtils.swift  SyntaxExtensions.swift  Utils.swift  generated
Sources/SwiftRefactor/: AddSeparatorsToIntegerLiteral.swift  ArgumentMatcher.swift  ArgumentMatching.swift  CMakeLists.txt  CallLikeSyntax.swift  CallToTrailingClosures.swift  CollapseNestedIfStmt.swift  Collection+Only.swift  ConvertCommentToDocComment.swift  ConvertComputedPropertyToStored.swift  ConvertComputedPropertyToZeroParameterFunction.swift  ConvertStoredPropertyToComputed.swift  ConvertToDoCatch.swift  ConvertToSwitchStmt.swift  ConvertToTernaryExpression.swift  ConvertZeroParameterFunctionToComputedProperty.swift  DeclModifierRemover.swift  ExpandEditorPlaceholder.swift  ExpandTernaryExpr.swift  FormatRawStringLiteral.swift  InlineFunctionCall.swift  IntegerLiteralUtilities.swift  InvertIfCondition.swift  MigrateToNewIfLetSyntax.swift  MoveMembersToExtension.swift  OpaqueParameterToGeneric.swift  RefactoringProvider.swift  RemoveRedundantParens.swift  RemoveRedundantParentheses.swift  RemoveSeparatorsFromIntegerLiteral.swift  SyntaxUtils.swift
Sources/SwiftSyntax-all/: empty.swift
(+1655 files in other folders)
